# api-intelligence-mcp

./: .env  FINAL_CHECKLIST.md  MIGRATION_SUMMARY.md  README.md  TOOLS_REFERENCE.md  compose.yaml  pyproject.toml
api_intelligence_mcp/src/: api.py  main.py  mcp_server.py  settings.py
api_intelligence_mcp/src/oauth/: controller.py  handler.py  models.py  service.py
api_intelligence_mcp/src/storage/: storage_service.py
api_intelligence_mcp/src/tools/: analyze_api_response.py  compare_api_responses.py  generate_api_documentation.py  optimize_api_response_schema.py
deployment/openshift/: buildconfig.yaml  configmap.yaml  deployment.yaml  imagestream.yaml  kustomization.yaml  route.yaml  secret.yaml  service.yaml
template_mcp_server/src/: api.py  main.py  mcp_server.py
template_mcp_server/src/tools/: analyze_api_response.py  compare_api_responses.py  generate_api_documentation.py  optimize_api_response_schema.py
tests/: test_api.py  test_basic.py  test_main.py  test_mcp.py  test_oauth_controller.py  test_oauth_handler.py  test_oauth_service.py  test_settings.py  test_storage_init.py  test_storage_service.py  test_tools.py  test_utils.py
